Update for Java 17 Clean code